# TradingAI

./: .env.example  .gitignore  PLAN.md  README.md  RUNBOOK.md  SIGNALS.md  STRATEGY.md  pyproject.toml
.claude/skills/trading-analysis/: SKILL.md
.claude/skills/trading-analysis/scripts/: run.sh
.github/workflows/: ci.yml
config/: config.yaml
config/strategies/: default.md
src/tradingai/: __init__.py  agent.py  backtest.py  config.py  evaluation.py  features.py  indicators.py  live.py  logging_setup.py  market_data.py  mcp_bybit.py  mcp_kraken.py  metrics.py  permissions.py  planning.py  reporting.py  risk.py  runner.py  scheduler.py  snapshot.py  state.py  strategy.py
tests/: test_backtest.py  test_config.py  test_evaluation.py  test_indicators.py  test_market_data.py  test_metrics.py  test_permissions.py  test_planning.py  test_risk.py  test_scheduler.py  test_strategy.py
